# google-cloud-agent-demo

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.idx/: dev.nix  integrations.json
app/gemini-demo/: main.py  pyproject.toml
docs/: bq_mcp_agent.md  bq_tool_agent.md
scripts/: set_env.py
src/agents/adk/: location_search_agent.py
src/agents/bq_mcp/: agent.py  prompt.py
src/agents/bq_tool/: agent.py  prompt.py
src/agents/concierge/: agent.py  prompt.py
src/agents/concierge/sub_agents/planner/: __init__.py  agent.py
src/agents/concierge_parallel/: agent.py
src/agents/concierge_parallel/sub_agents/booker/: __init__.py  prompt.py
src/agents/concierge_parallel/sub_agents/chef/: __init__.py  agent.py  prompt.py
src/agents/concierge_parallel/sub_agents/planner/: prompt.py
src/agents/concierge_parallel/sub_agents/sommelie/: agent.py  prompt.py
src/agents/concierge_tools/: .env.template  agent.py  prompt.py
src/agents/research/: agent.py
src/agents/restaurant/: .env.template  __init__.py  agent.py  prompt.py
src/agents/search/: agent.py  prompts.py
src/agents/transport/: agent.py
src/agents/weather/: .env.template  agent.py  prompts.py
src/api/: main.py
src/chatbot_gemini/: app.py
src/chatbot_langchain_gemini/: app.py
src/chatbot_langchain_gemini_tool/: app.py
src/chatbot_langchain_gemini_tool/agents/: agents.py  tools.py
src/chatbot_streamlit/: app.py
src/function_calling/: app.py
src/mcp/: adk_mcp_server.py
src/mcp/adk_local_mcp/: agent.py  prompts.py
src/mcp/mcp_agent/: agent.py  prompts.py
(+14 files in other folders)
